package businesslogic;

public class LoginHandler extends Handler{
    @Override
    protected void pullData() {
    }

    @Override
    protected void render() {
    }

    @Override
    protected void handleInput() {
    }
}
