package businesslogic;

public class PlaylistHandler extends Handler {
    @Override
    protected void pullData() {
    }

    @Override
    protected void render() {
    }

    @Override
    protected void handleInput() {
    }
}
