package businesslogic;

public class RegistrationHandler extends Handler{
    @Override
    protected void pullData() {
    }

    @Override
    protected void render() {
    }

    @Override
    protected void handleInput() {
    }
}
