package domainmodel;

public class Suggestions extends Model {
    private Playlist playlist;

    public void Suggestions() {
        // TODO implement here
    }
}